# MAS_Practice

mars_exploration/: .gitignore  README.md  drone_mission_report.md  pyproject.toml
mars_exploration/outputs/: drone_report.md  drone_report_test.md  final_mission.md  master_mission_plan.md  mission_plan.json  mission_plan.md  rover_execution.md  rover_operation_plan  rover_operation_plan.md  satelite_plan.md  satellite_plan.md  structured_mission_plan.md
mars_exploration/src/mars_exploration/: main.py
mars_exploration/src/mars_exploration/crews/drone_crew/: drone_crew.py
mars_exploration/src/mars_exploration/crews/drone_crew/config/: drone_agent.yaml  drone_tasks.yaml
mars_exploration/src/mars_exploration/crews/integration_crew/: integration_crew.py
mars_exploration/src/mars_exploration/crews/integration_crew/config/: integration_agent.yaml  integration_tasks.yaml
mars_exploration/src/mars_exploration/crews/mission_crew/: mission_crew.py
mars_exploration/src/mars_exploration/crews/mission_crew/config/: mission_agent.yaml  mission_tasks.yaml
mars_exploration/src/mars_exploration/crews/mission_crew/outputs/: structured_mission_plan.md
mars_exploration/src/mars_exploration/crews/rover_crew/: rover_crew.py
mars_exploration/src/mars_exploration/crews/rover_crew/config/: rover_agent.yaml  rover_tasks.yaml
mars_exploration/src/mars_exploration/crews/satelite_crew/: contracts.py  parse_mission_plan.py  planning.py  satelite_crew.py  test_run.py
mars_exploration/src/mars_exploration/crews/satelite_crew/config/: satelite_agent.yaml  satelite_tasks.yaml
mars_exploration/src/mars_exploration/tests/: test_drone_crew.py  test_integration_crew.py  test_mission_crew.py  test_rover_crew.py
mars_exploration/src/mars_exploration/tools/: drone_info_tool.py  drone_tools.py  graphTool.py  map_reader_tool.py  markdown.py  satellite_tools.py
mars_exploration/src/mars_exploration/utils/: utils_markdown.py
mars_exploration/tests/mission_crew/: test_mission_crew.py
